<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.antonio.moziotest.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_migraine"
                />

            <RadioGroup
                android:id="@+id/migraine_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/migraineYes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/migraines_yes" />

                <RadioButton
                    android:id="@+id/migraineNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/migraines_no" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_age"
                />

            <TextView
                android:id="@+id/selected_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <Button
                android:id="@+id/button_select_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_select_age"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_gender"
                />

            <RadioGroup
                android:id="@+id/gender_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_female" />

                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_male" />

            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_substance"
                />
            <RadioGroup
                android:id="@+id/substance_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

            <RadioButton
                android:id="@+id/substanceYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/substance_yes" />

            <RadioButton
                android:id="@+id/substanceNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/substance_no" />

            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_send"
            android:layout_gravity="right"/>

    </LinearLayout>

</ScrollView>
